// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletAvatar.vue > [With Beachball Theme]: should be rendered correctly 1`] = `
<identicon-stub
  address=""
  isalternative="false"
  size="32"
  theme="beachball"
  value="cnWRzNrVQpnMoq4GNDyUjTp1ZTWxTaXNguoRTTqg45j4g23yq"
/>
`;

exports[`WalletAvatar.vue > [With Empty Address]: should be rendered correctly 1`] = `
<identicon-stub
  address=""
  isalternative="false"
  size="32"
  theme="polkadot"
  value=""
/>
`;

exports[`WalletAvatar.vue > [With Size 10]: should be rendered correctly 1`] = `
<identicon-stub
  address=""
  isalternative="false"
  size="10"
  theme="polkadot"
  value="cnWRzNrVQpnMoq4GNDyUjTp1ZTWxTaXNguoRTTqg45j4g23yq"
/>
`;

exports[`WalletAvatar.vue > [With Substrate Theme]: should be rendered correctly 1`] = `
<identicon-stub
  address=""
  isalternative="false"
  size="32"
  theme="substrate"
  value="cnWRzNrVQpnMoq4GNDyUjTp1ZTWxTaXNguoRTTqg45j4g23yq"
/>
`;

exports[`WalletAvatar.vue > [With default Theme (Polkadot) and Size]: should be rendered correctly 1`] = `
<identicon-stub
  address=""
  isalternative="false"
  size="32"
  theme="polkadot"
  value="cnWRzNrVQpnMoq4GNDyUjTp1ZTWxTaXNguoRTTqg45j4g23yq"
/>
`;
